--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -29,7 +29,7 @@ a {
   }
 
 .containerFilters{
-  width: 100vw;
+  width: 85vw;
   margin-bottom: 10%;
   margin-left: 8%;
   box-shadow: 10px 5px 5px #34332f;
@@ -43,6 +43,10 @@ a {
     margin-bottom: 10%;
     margin-left: 0px;
     margin-right: 5%;
+    padding: 2%;
+  }
+  #toggle{
+    width: 20%;
   }
  
   
@@ -131,4 +135,8 @@ a {
 
 .phone{
   border-radius: 50%;
+}
+
+#toggle{
+  width: 45%;
 }
