--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -37,21 +37,13 @@
               <a class="nav-link dropdown-toggle mx-lg-2 linkNav" href="#" role="button" data-bs-toggle="dropdown">Nous contacter</a>
               <ul class="dropdown-menu bg-dark">
                 <li>
-                  <a class="dropdown-item linkNav" href="tel:0383838282">Par téléphone</a>
+                  <a class="dropdown-item linkNav text-success" href="tel:0383838282">Par téléphone</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="{{ path('app_form') }}">
-                    <button 
-                      type="button" 
-                      class="btn linkNav" 
-                      data-bs-toggle="modal2" 
-                      data-bs-target="#staticBackdrop2"
-                    >Nous écrire
-                    </button>
-                  </a>
+                  <a class="dropdown-item linkNav text-success" href="/#plan-toulouse">Nous localiser</a>
                 </li>
                 <li>
-                  <a class="dropdown-item linkNav" href="/#plan-toulouse">Nous localiser</a>
+                  <a class="dropdown-item linkNav text-success" href="{{ path('app_form') }}">Nous écrire via un formulaire en ligne</a>
                 </li>
               </ul>
             </li>
