--- a/templates/partials/advert/_card.html.twig
+++ b/templates/partials/advert/_card.html.twig
@@ -1,9 +1,12 @@
-{% for advert in adverts %} 
-<div class="col-4 card border-primary bg-secondary mb-5 mx-5" style="width: 20rem;">
+{% set queryParams = app.request.query.all %}
+{% set queryString = queryParams|filter((v, k) => k != "page")|url_encode %}
+
+{% for advert in adverts %}
+<div class="col-4 card border-dark bg-secondary mb-5 mx-5" style="width: 20rem;">
     {% include "partials/advert/_car_picture_card.html.twig" %}
     <div class="card-body">
-        <h4 class="card-title text-success fw-semibold linkNav text-center">{{ advert.title}}</br></br></h5>
-        <p class="card-text fw-semibold border-top text-primary text-center linkNav">Prix : {{ advert.price }}€ </p>
+        <p class="card-title text-success fw-semibold linkNav text-center">{{ advert.title}}</br></br></p>
+        <p class="card-text fw-semibold border-top text-primary text-center linkNav" id="js-price">Prix : {{ advert.price }}€ </p>
         <p class="card-text text-light fw-semibold">Kilométrage : {{ advert.km }} km</p>
         <p class="card-text text-light fw-semibold">Emission Co2 : {{ advert.co2Emission }} g/km</p>
         <a 
@@ -15,6 +18,12 @@
 </div>
 
 {% endfor %}
+
+   {% if queryString is empty %}
+            <div class="pagination">     
+    {{ knp_pagination_render(adverts) }}
+    </div>  
+        {% endif %}
 
 
 
