--- a/templates/used_car/index.html.twig
+++ b/templates/used_car/index.html.twig
@@ -1,21 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Occasion - Garage Parrot{% endblock %}
-
 {% block body %}
     <main class="container-fluid">
         <div class="row justify-content-center">
             <h1 class="col-lg-8 mt-3 p-3 text-success text-center shadow-lg rounded mb-5">Nos véhicules d'occasion</h1>
-            <div class="row justify-content-center gx-0">
+            <div class="row justify-content-center">
                {% include "partials/advert/_filters_car.html.twig" %}
             </div>
         </div>
         <div>
-            <div class="row justify-content-center" id="resultats">
+            <div class="row justify-content-center" id="js-filter-content">
                 {% include "partials/advert/_card.html.twig" %}
             </div>
-          
-    {{ knp_pagination_render(adverts) }}
+
         </div>
+     
+        
     </main>    
 {% endblock %}
