--- a/templates/home/form_contact.html.twig
+++ b/templates/home/form_contact.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
     <div class="row justify-content-center">
 
-        <h3 class=" col-lg-6 p-3 text-center fs-5 text-success linkNav shadow-lg ">Contacter votre Garage Parrot</h3>
+        <h3 class=" col-lg-6 p-3 text-center fs-5 text-success linkNav shadow-lg description rounded">Contacter votre Garage Parrot</h3>
     </div>
 
-    <div class="row row-cols-lg-2 col justify-content-center ">
+    <div class="row row-cols-lg-2 col justify-content-center fw-bold ">
 
         {{ form_start(formView) }}
             <div class="formu-contact col-lg-3">
