--- a/templates/partials/advert/_table_details_car.html.twig
+++ b/templates/partials/advert/_table_details_car.html.twig
@@ -1,5 +1,5 @@
 <table class="table table-bordered table-secondary">
-    <caption class="text-light text-top fw-bold">{{ advert.title }} {{ advert.price }}€</caption>
+    <caption class="text-light text-top fw-bold description rounded">{{ advert.title }} {{ advert.price }}€</caption>
     <thead>
         <tr>
             <th scope="row" class="text-dark fw-bold"></th>
