--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,9 +13,9 @@
         </div>
     {% endif %}
     <div class="row justify-content-center">
-        <h1 class="my-5 font-weight-normal text-success text-center shadow-lg col-lg-6">Connexion</h1>
+        <h1 class="my-5 font-weight-normal text-success text-center shadow-lg col-lg-4 p-3 description rounded">Connexion</h1>
         <div class="row justify-content-center">         
-            <label for="inputEmail" class="text-light col-lg-4">Email
+            <label for="inputEmail" class="text-light col-lg-4 fw-bold">Email
                 <input
                     type="email" 
                     value="{{ last_username }}" 
@@ -28,7 +28,7 @@
             </label>
         </div>
         <div class="row justify-content-center">
-            <label for="inputPassword" class="text-light col-lg-4">Mot de passe
+            <label for="inputPassword" class="text-light col-lg-4 fw-bold">Mot de passe
                 <input 
                     type="password" 
                     name="password" 
