--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -30,7 +30,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #554c3b;
-  --bs-secondary: #a5a293;
+  --bs-secondary: rgba(80, 100, 111, 0.6);
   --bs-success: #FDB402;
   --bs-info: #58f544;
   --bs-warning: #ffc107;
@@ -38,7 +38,7 @@
   --bs-light: #eeebc1;
   --bs-dark: #1C1A1D;
   --bs-primary-rgb: 85, 76, 59;
-  --bs-secondary-rgb: 165, 162, 147;
+  --bs-secondary-rgb: 80, 100, 111;
   --bs-success-rgb: 253, 180, 2;
   --bs-info-rgb: 88, 245, 68;
   --bs-warning-rgb: 255, 193, 7;
@@ -46,7 +46,7 @@
   --bs-light-rgb: 238, 235, 193;
   --bs-dark-rgb: 28, 26, 29;
   --bs-primary-text-emphasis: #221e18;
-  --bs-secondary-text-emphasis: #42413b;
+  --bs-secondary-text-emphasis: rgba(18, 22, 25, 0.84);
   --bs-success-text-emphasis: #654801;
   --bs-info-text-emphasis: #23621b;
   --bs-warning-text-emphasis: #664d03;
@@ -54,7 +54,7 @@
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #dddbd8;
-  --bs-secondary-bg-subtle: #edece9;
+  --bs-secondary-bg-subtle: rgba(238, 240, 241, 0.92);
   --bs-success-bg-subtle: #fff0cc;
   --bs-info-bg-subtle: #defdda;
   --bs-warning-bg-subtle: #fff3cd;
@@ -62,7 +62,7 @@
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #bbb7b1;
-  --bs-secondary-border-subtle: #dbdad4;
+  --bs-secondary-border-subtle: rgba(216, 221, 223, 0.84);
   --bs-success-border-subtle: #fee19a;
   --bs-info-border-subtle: #bcfbb4;
   --bs-warning-border-subtle: #ffe69c;
@@ -142,7 +142,7 @@
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #999489;
-  --bs-secondary-text-emphasis: #c9c7be;
+  --bs-secondary-text-emphasis: rgba(187, 194, 199, 0.76);
   --bs-success-text-emphasis: #fed267;
   --bs-info-text-emphasis: #9bf98f;
   --bs-warning-text-emphasis: #ffda6a;
@@ -150,7 +150,7 @@
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #110f0c;
-  --bs-secondary-bg-subtle: #21201d;
+  --bs-secondary-bg-subtle: rgba(8, 10, 11, 0.92);
   --bs-success-bg-subtle: #332400;
   --bs-info-bg-subtle: #12310e;
   --bs-warning-bg-subtle: #332701;
@@ -158,7 +158,7 @@
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #332e23;
-  --bs-secondary-border-subtle: #636158;
+  --bs-secondary-border-subtle: rgba(31, 39, 43, 0.76);
   --bs-success-border-subtle: #986c01;
   --bs-info-border-subtle: #359329;
   --bs-warning-border-subtle: #997404;
@@ -1944,13 +1944,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #edece9;
-  --bs-table-border-color: #bebdba;
-  --bs-table-striped-bg: #e1e0dd;
+  --bs-table-bg: rgba(238, 240, 241, 0.92);
+  --bs-table-border-color: rgba(184, 186, 186, 0.936);
+  --bs-table-striped-bg: rgba(224, 226, 227, 0.924);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #d5d4d2;
+  --bs-table-active-bg: rgba(211, 212, 213, 0.928);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #dbdad8;
+  --bs-table-hover-bg: rgba(217, 219, 220, 0.926);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2981,20 +2981,20 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #a5a293;
-  --bs-btn-border-color: #a5a293;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #b3b0a3;
-  --bs-btn-hover-border-color: #aeab9e;
-  --bs-btn-focus-shadow-rgb: 140, 138, 125;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #b7b5a9;
-  --bs-btn-active-border-color: #aeab9e;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: rgba(80, 100, 111, 0.6);
+  --bs-btn-border-color: rgba(80, 100, 111, 0.6);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgba(57, 71, 79, 0.66);
+  --bs-btn-hover-border-color: rgba(51, 63, 70, 0.68);
+  --bs-btn-focus-shadow-rgb: 131, 145, 153;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgba(51, 63, 70, 0.68);
+  --bs-btn-active-border-color: rgba(45, 56, 62, 0.7);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #a5a293;
-  --bs-btn-disabled-border-color: #a5a293;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: rgba(80, 100, 111, 0.6);
+  --bs-btn-disabled-border-color: rgba(80, 100, 111, 0.6);
 }
 
 .btn-success {
@@ -3117,19 +3117,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  --bs-btn-color: #a5a293;
-  --bs-btn-border-color: #a5a293;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #a5a293;
-  --bs-btn-hover-border-color: #a5a293;
-  --bs-btn-focus-shadow-rgb: 165, 162, 147;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #a5a293;
-  --bs-btn-active-border-color: #a5a293;
+  --bs-btn-color: rgba(80, 100, 111, 0.6);
+  --bs-btn-border-color: rgba(80, 100, 111, 0.6);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgba(80, 100, 111, 0.6);
+  --bs-btn-hover-border-color: rgba(80, 100, 111, 0.6);
+  --bs-btn-focus-shadow-rgb: 80, 100, 111;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgba(80, 100, 111, 0.6);
+  --bs-btn-active-border-color: rgba(80, 100, 111, 0.6);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #a5a293;
+  --bs-btn-disabled-color: rgba(80, 100, 111, 0.6);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #a5a293;
+  --bs-btn-disabled-border-color: rgba(80, 100, 111, 0.6);
   --bs-gradient: none;
 }
 
@@ -6763,7 +6763,7 @@ textarea.form-control-lg {
 }
 
 .text-bg-secondary {
-  color: #000 !important;
+  color: #fff !important;
   background-color: RGBA(var(--bs-secondary-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -6811,8 +6811,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-secondary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: RGBA(183, 181, 169, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(183, 181, 169, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(51, 63, 70, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(51, 63, 70, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-success {
@@ -11855,9 +11855,18 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+body {
+  background-image: url(../images/background2.jpg);
+  background-size: cover;
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
 .linkNav {
   font-family: "Audiowide", cursive;
-  font-size: 0.98em;
+  font-size: 0.95em;
 }
 
 h1, .h1, h2, .h2 {
@@ -11873,25 +11882,14 @@ a {
   border-bottom: solid 2px #FDB402;
 }
 
-.containerFilters {
-  width: 85vw;
-  margin-bottom: 10%;
-  margin-left: 8%;
-  box-shadow: 10px 5px 5px #34332f;
-}
-
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1402px) {
   .containerFilters {
     display: flex;
     justify-content: space-evenly;
-    width: 90vw;
-    margin-bottom: 10%;
+    height: auto;
     margin-left: 0px;
     margin-right: 5%;
     padding: 2%;
-  }
-  #toggle {
-    width: 20%;
   }
 }
 .atelier {
@@ -11911,7 +11909,6 @@ a {
 .slide-4,
 .slide-5 {
   margin-left: 30vw;
-  background-color: #a5a293;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -11923,8 +11920,7 @@ a {
   .slide-3,
   .slide-4,
   .slide-5 {
-    margin-left: 10vw;
-    background-color: #a5a293;
+    margin-left: 0;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -11937,7 +11933,6 @@ a {
   .slide-3,
   .slide-4,
   .slide-5 {
-    background-color: #a5a293;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -11953,17 +11948,14 @@ a {
 }
 
 .clé-molette {
-  border-radius: 30%;
-}
-
-.maintenanceList {
-  list-style: none;
-  color: #FDB402;
+  border-radius: 80%;
+  width: 20%;
+  height: auto;
 }
 
 .serviceList {
+  background: rgba(79, 99, 109, 0.6);
   list-style: none;
-  color: #FDB402;
 }
 
 .formu-contact {
@@ -11977,4 +11969,13 @@ a {
 
 #toggle {
   width: 45%;
+}
+
+.description {
+  text-align: justify;
+  background: rgba(79, 99, 109, 0.6);
+}
+
+.orangeTitle {
+  background: rgba(253, 182, 2, 0.6);
 }/*# sourceMappingURL=app.css.map */
