--- a/templates/maintenance_service/index.html.twig
+++ b/templates/maintenance_service/index.html.twig
@@ -4,14 +4,13 @@
 
 {% block body %}
  <main class="container-fluid">
-        <section class="row justify-content-center">
-            <h1 class="col-lg-8 mt-3 p-3 text-success text-center shadow-lg rounded mb-5">Entretiens et services</h1>
-            <img src="{{ asset('build/images/mécanique-auto.jpg')}}" class="atelier col-lg-10 mb-5 img-fluid" alt="photo_atelier">
-        </section>
-        <section class="row justify-content-center">
-            <h2 class="col-6 bg-success text-center fw-bold shadow-lg rounded my-5">Entretiens</h2>
+        <div class="row justify-content-center">
+            <h1 class="col-lg-8 mx-5 p-3 text-success text-center description shadow-lg rounded mb-5">Entretiens et services</h1>
+            </br></br>
+        <div class="row justify-content-center">
+            <h2 class="col-6 orangeTitle text-center fw-bold shadow-lg rounded my-5">Entretiens</h2>
             <div class="row justify-content-center">
-                <p class="col-lg-6 p-3 text-light fw-bold shadow-lg rounded">Confier régulièrement votre véhicule à votre
+                <p class="col-lg-6 p-3 text-light fw-bold shadow-lg rounded description">Confier régulièrement votre véhicule à votre
                     concessionnaire Parrot pour l'entretien et les révisions vous permet de le conserver dans un état optimal.
                     L'entretien permet de garantir les performances de votre moteur, d'améliorer la consommation de carburant et de
                     réduire les émissions de CO2. Outre réaliser des économies, il vous permet de rester serein, confiant dans la
@@ -19,32 +18,32 @@
                     pièces d'origine.</br></br><strong>Nous recommandons une révision annuelle ou tous les 30 000 km.</strong></br></br>Votre 
                     réparateur Parrot agréé contrôle les éléments suivants :
                 </p>
-                <ul class="entretiens-list col-lg-8 row row-cols-2 p-3 text-white shadow-lg rounded">
+                <ul class="serviceList col-lg-8 row row-cols-2 p-3 text-white shadow-lg rounded">
                     {% for maintenance in maintenances %}
-                        <li class="maintenanceList text-light col-lg-4 p-3 p-lg-0">
+                        <li class="text-light fw-bold col-lg-4 p-3 p-lg-0">
                         <img src="{{ asset('build/images/wrench.svg') }}"  alt="puce">
                             {{ maintenance.designation }}
                         </li>  
                     {% endfor %}
                 </ul>
             </div>
-        </section>
-        <section class="row justify-content-center">
-            <h2 class="col-6 bg-success text-center fw-bold shadow-lg rounded my-5">Services</h2>
+        </div>
+        <div class="row justify-content-center">
+            <h2 class="col-6 orangeTitle text-center fw-bold shadow-lg rounded my-5">Services</h2>
             <div class="row justify-content-center">
-                <p class="col-lg-6 p-3 text-light fw-bold shadow-lg rounded">Parrot Automobiles peut vous prêter un véhicule de 
+                <p class="col-lg-6 p-3 text-light fw-bold shadow-lg rounded description">Parrot Automobiles peut vous prêter un véhicule de 
                         courtoisie en cas d'immobilisation de plus d'une journée. Tous types de réparations peuvent être effectuées 
                         multi-marques.</br> Voici une liste non exhaustive des prestations :
                 </p>
-                <ul class="services-list col-lg-8 row row-cols-2 p-3 mb-5 text-white shadow-lg rounded">
+                <ul class="serviceList col-lg-8 row row-cols-2 p-3 text-white shadow-lg rounded">
                     {% for service in services %}
-                        <li class="serviceList text-light col-lg-4 p-3 p-lg-0">
+                        <li class="text-light col-lg-4 p-3 p-lg-0 fw-bold">
                         <img src="{{ asset('build/images/screw-wrench.svg') }}"  alt="puce">
                             {{ service.designation }}
                         </li>
                     {% endfor %}
                 </ul>
             </div>
-        </section>
+        </div>
     </main>
 {% endblock %}
