--- a/templates/partials/home/_block_presentation.html.twig
+++ b/templates/partials/home/_block_presentation.html.twig
@@ -1,14 +1,14 @@
-<section class="row mt-5 justify-content-center">
-    <h1 class="col-lg-10 m-5 p-3 text-success text-center shadow-lg rounded">Bienvenue sur le site du Garage V. PARROT</h1>
-    <div class="description col-lg-4 mt-3 p-5">
-        <p class="description-welcome text-light">"Toute l'équipe est à votre disposition pour vous accompagner et vous 
+<div class="row mt-5 justify-content-center">
+    <h1 class="col-lg-8 m-5 p-3 text-success text-center fw-bold shadow-lg rounded description">Bienvenue sur le site du Garage V. PARROT</h1>
+    <div class="col-lg-4 mt-3 p-5">
+        <p class="text-light fw-bold description rounded p-3">"Toute l'équipe est à votre disposition pour vous accompagner et vous 
             conseiller sur l'achat d'un véhicule d'occasion ou pour la réparation et l'entretien de votre véhicule. N'hésitez-pas 
             à nous rendre visite ou nous contacter pour plus de renseignements."
         </p>
     </div>
-</section>
+</div>
 <div class="container-fluid">
-    <section class="row justify-content-center">
+    <div class="row justify-content-center">
         <div id="plan-toulouse" class="d-flex justify-content-center col-4">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2889.0511372027613!2d1.4485193765528848!3d43.60547685551555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebc9998f44167%3A0x5b3ad4aa85d14018!2s25%20Rue%20de%20l&#39;Industrie%2C%2031000%20Toulouse!5e0!3m2!1sfr!2sfr!4v1685014966761!5m2!1sfr!2sfr" 
                     width="400" 
@@ -20,7 +20,7 @@
                     class="my-5">
             </iframe>
         </div>
-    </section>
+    </div>
     <div class="text-light row justify-content-center">
         <div class="col-8">
             <img src="{{ asset('build/images/localisation.png') }}" width="45" height"10" alt="logo localisation">
@@ -29,24 +29,27 @@
             <a href="tel:0383838282" class="btn btn-outline-success linkNav mt-3">03 83 83 82 82</a>
         </div>     
     </div>
-<section class="row justify-content-center">
-    <h1 class="col-lg-10 mt-3 p-3 text-success text-center shadow-lg  mb-5">Nos services</h1>
-    <img src="{{ asset('build/images/clé_molette.webp')}}" class="img-fluid clé-molette w-25 mb-5" alt="image clé à molette">
-    <h3 class="col-10 p-3 text-primary fw-bold text-center shadow-lg">
+<div class="row justify-content-center">
+    <h1 class="col-lg-8 m-5 p-3 text-success text-center shadow-lg mb-5 description rounded">Nos services</h1>
+</div>
+<div class="row justify-content-center">
+    <img src="{{ asset('build/images/clé_molette.webp')}}" class="clé-molette mb-5" alt="image clé à molette">
+</div>
+<div class="row justify-content-center"> 
+    <h3 class="col-8 p-3 text-success fw-bold text-center shadow-lg description rounded">
         VEHICULES D'OCCASIONS
     </h3>
-    <p class="col-10 p-3 text-light text-center"> 
-        </br>
+    <p class="col-8 col-lg-6 p-3 text-light fw-bold text-center description rounded"> 
+
         Prenez rendez-vous avec un de nos conseillers par téléphone pour toute informations, devis, financements, achat. 
         Consultez nos annonces en ligne.
-        </br>
+
     </p>
-    <h3 class="col-10 p-3 text-primary fw-bold text-center shadow-lg">
+    <h3 class="col-8 p-3 text-success fw-bold text-center shadow-lg description rounded">
         RENDEZ-VOUS ATELIER
     </h3> 
-    <p class="col-10 p-3 text-light text-center"> 
-        </br>
+    <p class="col-8 col-lg-6 p-3 text-light fw-bold text-center description rounded"> 
         Prenez rendez-vous avec le conseiller d'accueil par téléphone pour toutes demandes de réparation ou d'entretien 
         ou de devis.
     </p>
-</section>
+</div>
