--- a/templates/partials/home/_block_comment.html.twig
+++ b/templates/partials/home/_block_comment.html.twig
@@ -55,6 +55,6 @@
             </div>
         {% endif %}
         <div class="col-8 text-success fw-bold description">Avis posté par : {{ comment.nickname }}</div> 
-        <div class="col-8 text-light fw-bold mb-3 description"> {{ comment.designation | raw }}</div></br>    
+        <div class="col-8 text-light fw-bold mb-3 description"> {{ comment.designation | raw }}</div>   
 {% endif %}
 {% endfor %}
