modif indentations et erreurs mineures

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -6,7 +6,7 @@
 
 
         <h2>Bienvenue {{ea.user.firstName}} {{ea.user.lastName}}, </br> {{ea.user.workplace.designation}}</h2> 
-        <p>Vous possédez les <strong>droits administrateurs</strong>, vous avez accès à toutes les modifications du site web! </br></p>
+        <p>Vous possédez les <strong>droits administrateurs</strong>, vous avez accès à toutes les modifications du site web!</p></br>
         <p>Les autres utilisateurs ont un accès restreint et ils ont accès uniquement à ces catégories :</p>
             <ul>
                 <li>Messagerie</li>
