--- a/templates/users/dashboard.html.twig
+++ b/templates/users/dashboard.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 
         <h2>Bienvenue {{ea.user.firstName}} {{ea.user.lastName}}, </br> {{ea.user.workplace.designation}}</br></h2>
-        <p>Vous possédez les droits utilisateurs, vous pouvez donc ainsi gérer la messagerie, les commentaires et les annonces.</br></p>
+        <p>Vous possédez les droits utilisateurs, vous pouvez donc ainsi gérer la messagerie, les commentaires et les annonces.</p></br>
         <h3>Messagerie</h3>
         <p>Dans vos catégories, un aperçu de la messagerie est disponible. Vous pouvez répondre en suivant ce lien : 
             <a href="https://mailtrap.io/" target="_blank"><button type="button">Mailtrap</button></a></br>  
