--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -3,7 +3,7 @@
       <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
         <img class="bi me-2" width="200" height="200" src="{{asset('build/images/logo carre.png')}}" alt="logo">
       </a>
-      <p class="text-light fw-bold">© 2023</p>
+      <p class="text-light fw-bold">© 2023-2024</p>
     </div>
 
     <div class="col mb-3">
