--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -50,20 +50,16 @@
           </ul>
         {% if app.user %}
           <p class="text-success fw-bold mx-2 my-lg-3 linkNav">
-            Bonjour {{app.user.firstName}} {{app.user.lastName|first}}.</br> {{app.user.workplace.designation}}
+            Bonjour {{app.user.firstName}} {{app.user.lastName|first}}.<br> {{app.user.workplace.designation}}
           </p>
-          <ul class="navbar-nav">
-            <li class="nav-item">
+          <div class="navbar-nav">
               <a href= "{% if is_granted('ROLE_ADMIN') %} {{ path('admin')}}
                         {% else %}
                           {{ path('app_user') }} 
                         {% endif %}"
                 ><button type="button" class="btn btn-outline-secondary linkNav mx-lg-2 my-2">Mon compte</button>
               </a>
-            <li class="nav-item">
-              <a href="{{ path('app_logout') }}"><button type="button" class="btn btn-outline-success linkNav mt-2">Déconnexion</button></a>
-            </li>
-          </ul>
+          </div>
         {% else %}
          <a href="{{ path('app_login') }}"><button type="button" class="btn btn-outline-success linkNav">Connexion</button></a> 
         {% endif %}
