modif UX button + qq erreurs de code

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,9 @@
 
 {% block body %}
     <main class="row justify-content-center">
-        <h1 class="col-lg-8 my-5 p-3 text-success text-center fw-bold shadow-lg rounded description">Derniers arrivages véhicules d'occasion</h1>
-        
+        <h1 class="col-lg-8 my-5 p-3 text-success text-center fw-bold shadow-lg rounded description">
+            Derniers arrivages véhicules d'occasion
+        </h1>
         <div class="container">
             {% include "partials/advert/_carousel.html.twig" %}
         </div> 
@@ -20,6 +21,5 @@
                 </div>
             </div>
     </main>
-</body>
 {% endblock %}
 
