--- a/templates/partials/home/_block_presentation.html.twig
+++ b/templates/partials/home/_block_presentation.html.twig
@@ -1,9 +1,12 @@
 <div class="row mt-5 justify-content-center">
-    <h1 class="col-lg-8 m-5 p-3 text-success text-center fw-bold shadow-lg rounded description">Bienvenue sur le site du Garage V. PARROT</h1>
+    <h1 class="col-lg-8 m-5 p-3 text-success text-center fw-bold shadow-lg rounded description">
+        Bienvenue sur le site du Garage V. PARROT
+    </h1>
     <div class="col-lg-4 mt-3 p-5">
-        <p class="text-light fw-bold description rounded p-3">"Toute l'équipe est à votre disposition pour vous accompagner et vous 
-            conseiller sur l'achat d'un véhicule d'occasion ou pour la réparation et l'entretien de votre véhicule. N'hésitez-pas 
-            à nous rendre visite ou nous contacter pour plus de renseignements."
+        <p class="text-light fw-bold description rounded p-3">
+            "Toute l'équipe est à votre disposition pour vous accompagner et vous conseiller sur l'achat d'un véhicule
+            d'occasion ou pour la réparation et l'entretien de votre véhicule. N'hésitez-pas à nous rendre visite ou
+            nous contacter pour plus de renseignements."
         </p>
     </div>
 </div>
@@ -23,33 +26,32 @@
     </div>
     <div class="text-light row justify-content-center">
         <div class="col-8">
-            <img src="{{ asset('build/images/localisation.png') }}" width="45" height"10" alt="logo localisation">
-            <span class="text-light linkNav">25 rue de l'industrie </br>31000 TOULOUSE </br> </span>
-            <img src="{{ asset('build/images/phone.png') }}" width="45" height"10" alt="logo téléphone" class="phone">
-            <a href="tel:0383838282" class="btn btn-outline-success linkNav mt-3">03 83 83 82 82</a>
+            <img src="{{ asset('build/images/localisation.png') }}" width="45" alt="logo localisation">
+            <span class="text-light linkNav">25 rue de l'industrie <br>31000 TOULOUSE <br> </span>
+            <img src="{{ asset('build/images/phone.png') }}" width="45" alt="logo téléphone" class="phone">
+            <a href="tel:0383838282" class="btn btn-dark btn-outline-success linkNav mt-3">03 83 83 82 82</a>
         </div>     
     </div>
-<div class="row justify-content-center">
-    <h1 class="col-lg-8 m-5 p-3 text-success text-center shadow-lg mb-5 description rounded">Nos services</h1>
-</div>
-<div class="row justify-content-center">
-    <img src="{{ asset('build/images/clé_molette.webp')}}" class="clé-molette mb-5" alt="image clé à molette">
-</div>
-<div class="row justify-content-center"> 
-    <h3 class="col-8 p-3 text-success fw-bold text-center shadow-lg description rounded">
-        VEHICULES D'OCCASIONS
-    </h3>
-    <p class="col-8 col-lg-6 p-3 text-light fw-bold text-center description rounded"> 
-
-        Prenez rendez-vous avec un de nos conseillers par téléphone pour toute informations, devis, financements, achat. 
-        Consultez nos annonces en ligne.
-
-    </p>
-    <h3 class="col-8 p-3 text-success fw-bold text-center shadow-lg description rounded">
-        RENDEZ-VOUS ATELIER
-    </h3> 
-    <p class="col-8 col-lg-6 p-3 text-light fw-bold text-center description rounded"> 
-        Prenez rendez-vous avec le conseiller d'accueil par téléphone pour toutes demandes de réparation ou d'entretien 
-        ou de devis.
-    </p>
+    <div class="row justify-content-center">
+        <h1 class="col-lg-8 m-5 p-3 text-success text-center shadow-lg mb-5 description rounded">Nos services</h1>
+    </div>
+    <div class="row justify-content-center">
+        <img src="{{ asset('build/images/clé_molette.webp')}}" class="clé-molette mb-5" alt="image clé à molette">
+    </div>
+    <div class="row justify-content-center">
+        <h3 class="col-8 p-3 text-success fw-bold text-center shadow-lg description rounded">
+            VEHICULES D'OCCASIONS
+        </h3>
+        <p class="col-8 col-lg-6 p-3 text-light fw-bold text-center description rounded">
+            Prenez rendez-vous avec un de nos conseillers par téléphone pour toute informations, devis, financements, achat.
+            Consultez nos annonces en ligne.
+        </p>
+        <h3 class="col-8 p-3 text-success fw-bold text-center shadow-lg description rounded">
+            RENDEZ-VOUS ATELIER
+        </h3>
+        <p class="col-8 col-lg-6 p-3 text-light fw-bold text-center description rounded">
+            Prenez rendez-vous avec le conseiller d'accueil par téléphone pour toutes demandes de réparation ou d'entretien
+            ou de devis.
+        </p>
+    </div>
 </div>
