--- a/templates/used_car_details/index.html.twig
+++ b/templates/used_car_details/index.html.twig
@@ -3,18 +3,23 @@
 {% block title %}Détails occasion Parrot{% endblock %}
 
 {% block body %}
-<main class="container-fluid">
-        <section class="row justify-content-center">
-            <h1 class="col-lg-8 mt-3 text-success text-center shadow-lg mb-5 description rounded p-3">Détail du véhicule : {{ advert.title }} </h1>
+<div class="container-fluid">
+        <div class="row justify-content-center">
+            <h1 class="col-lg-8 mt-3 text-success text-center shadow-lg mb-5 description rounded p-3">
+                    Détail du véhicule : {{ advert.title }}
+            </h1>
             {% include "partials/advert/_car_picture_details.html.twig" %}
         <div class="table-responsive-md col-lg-6">
-            {% include "partials/advert/_table_details_car.html.twig" %}
-        <p class="text-success col-lg-4 fw-bold description rounded">Besoin de plus d'informations?</p>
-        <a 
-            class="btn btn-outline-info mb-5 linkNav" 
-            href="{{path('app_form_id', {'id': advert.id})}}">Contacter le vendeur
-        </a>
+                {% include "partials/advert/_table_details_car.html.twig" %}
+                <p class="text-success col-lg-4 fw-bold description rounded">
+                        Besoin de plus d'informations?
+                </p>
+                <a
+                    class="btn btn-dark btn-outline-info mb-5 linkNav"
+                    href="{{path('app_form_id', {'id': advert.id})}}">
+                        Contacter le vendeur
+                </a>
         </div>
-        </section>
-</main>
+</div>
+</div>
 {% endblock %}
