--- a/templates/home/form_contact.html.twig
+++ b/templates/home/form_contact.html.twig
@@ -29,8 +29,10 @@
                 {% endif %}
                     {{ form_row(formView.subject) }}
         <div class="row justify-content-center">
-                    <button type="submit" class="btn btn-outline-info p-2 my-5 mx-2 linkNav col-lg-3 col-4">Envoyer</button>
-                    <a class="btn btn-outline-success p-2 my-5 mx-2 linkNav col-lg-3 col-4" href="{{path('app_used_car')}}">Retour</a>
+                    <a class="btn btn-success p-2 my-5 mx-2 linkNav col-lg-3 col-4" href="{{path('app_used_car')}}">
+                        Retour
+                    </a>
+                    <button type="submit" class="btn btn-dark btn-outline-info p-2 my-5 mx-2 linkNav col-lg-3 col-4">Envoyer</button>
         </div>
             {{ form_end(formView) }}
         </div>
